{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 56,
  "lineage": "947e8c26-016c-3ad8-edbb-589e5aee952a",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:525127693154:security-group/sg-0cbec132048477bb9",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0cbec132048477bb9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04a8f3517b6528a16"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "sentiflow-cluster-cluster-20260208130235501900000009",
            "name_prefix": "sentiflow-cluster-cluster-",
            "owner_id": "525127693154",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "sentiflow-cluster-cluster",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "sentiflow-cluster-cluster",
              "Owner": "DevOps-Student",
              "Project": "SentiFlow",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc8e2683b888cc0c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:525127693154:security-group/sg-04a8f3517b6528a16",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04a8f3517b6528a16",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0cbec132048477bb9"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0cbec132048477bb9"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0cbec132048477bb9"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0cbec132048477bb9"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0cbec132048477bb9"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0cbec132048477bb9"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "sentiflow-cluster-node-20260208130235470700000008",
            "name_prefix": "sentiflow-cluster-node-",
            "owner_id": "525127693154",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "sentiflow-cluster-node",
              "Terraform": "true",
              "kubernetes.io/cluster/sentiflow-cluster": "owned"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "sentiflow-cluster-node",
              "Owner": "DevOps-Student",
              "Project": "SentiFlow",
              "Terraform": "true",
              "kubernetes.io/cluster/sentiflow-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc8e2683b888cc0c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1565530935",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0cbec132048477bb9",
            "security_group_rule_id": "sgr-0027064e63241dd74",
            "self": false,
            "source_security_group_id": "sg-04a8f3517b6528a16",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-3015758227",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-04a8f3517b6528a16",
            "security_group_rule_id": "sgr-001b8e15725d22d87",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-988645524",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04a8f3517b6528a16",
            "security_group_rule_id": "sgr-029d1ac5a3d149ced",
            "self": false,
            "source_security_group_id": "sg-0cbec132048477bb9",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-18004701",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04a8f3517b6528a16",
            "security_group_rule_id": "sgr-01d96449f887eb7de",
            "self": false,
            "source_security_group_id": "sg-0cbec132048477bb9",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-3360742731",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04a8f3517b6528a16",
            "security_group_rule_id": "sgr-0cf8a00e171caf761",
            "self": false,
            "source_security_group_id": "sg-0cbec132048477bb9",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-3675054442",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04a8f3517b6528a16",
            "security_group_rule_id": "sgr-029d4883fb25f5ef4",
            "self": false,
            "source_security_group_id": "sg-0cbec132048477bb9",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-3215839905",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04a8f3517b6528a16",
            "security_group_rule_id": "sgr-0b63b6fc0275c0687",
            "self": false,
            "source_security_group_id": "sg-0cbec132048477bb9",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1394144096",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04a8f3517b6528a16",
            "security_group_rule_id": "sgr-079cdcef8410f10c2",
            "self": false,
            "source_security_group_id": "sg-0cbec132048477bb9",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-3672261585",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04a8f3517b6528a16",
            "security_group_rule_id": "sgr-0e5ace188eb7037eb",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2553747948",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04a8f3517b6528a16",
            "security_group_rule_id": "sgr-048f23e9a4bc3822e",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-1013496323",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-04a8f3517b6528a16",
            "security_group_rule_id": "sgr-0f2dbbfb5898e6855",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:525127693154:network-acl/acl-05df8fdaf5f2c86b7",
            "default_network_acl_id": "acl-05df8fdaf5f2c86b7",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-05df8fdaf5f2c86b7",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "525127693154",
            "subnet_ids": [
              "subnet-0166e326a339af57d",
              "subnet-035fabd44644c0ec2",
              "subnet-0542167f36d400293",
              "subnet-06e224c9bfd4b67de"
            ],
            "tags": {
              "Environment": "prod",
              "Name": "sentiflow-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "sentiflow-vpc-default",
              "Owner": "DevOps-Student",
              "Project": "SentiFlow",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0dc8e2683b888cc0c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:525127693154:route-table/rtb-0046a82be55697eed",
            "default_route_table_id": "rtb-0046a82be55697eed",
            "id": "rtb-0046a82be55697eed",
            "owner_id": "525127693154",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prod",
              "Name": "sentiflow-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "sentiflow-vpc-default",
              "Owner": "DevOps-Student",
              "Project": "SentiFlow",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0dc8e2683b888cc0c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:525127693154:security-group/sg-0df30932f99f8b33b",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0df30932f99f8b33b",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "525127693154",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "sentiflow-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "sentiflow-vpc-default",
              "Owner": "DevOps-Student",
              "Project": "SentiFlow",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0dc8e2683b888cc0c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0325914260aa3fc53",
            "association_id": "eipassoc-02066f2f07e7e3786",
            "domain": "vpc",
            "id": "eipalloc-0325914260aa3fc53",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0941491e5a36667cc",
            "private_dns": "ip-10-0-101-102.ec2.internal",
            "private_ip": "10.0.101.102",
            "public_dns": "ec2-100-49-140-50.compute-1.amazonaws.com",
            "public_ip": "100.49.140.50",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prod",
              "Name": "sentiflow-vpc-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "sentiflow-vpc-us-east-1a",
              "Owner": "DevOps-Student",
              "Project": "SentiFlow",
              "Terraform": "true"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:525127693154:internet-gateway/igw-054b0dc50126ad0d9",
            "id": "igw-054b0dc50126ad0d9",
            "owner_id": "525127693154",
            "tags": {
              "Environment": "prod",
              "Name": "sentiflow-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "sentiflow-vpc",
              "Owner": "DevOps-Student",
              "Project": "SentiFlow",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0dc8e2683b888cc0c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0325914260aa3fc53",
            "association_id": "eipassoc-02066f2f07e7e3786",
            "connectivity_type": "public",
            "id": "nat-08d0b8afbdc77a43e",
            "network_interface_id": "eni-0941491e5a36667cc",
            "private_ip": "10.0.101.102",
            "public_ip": "100.49.140.50",
            "subnet_id": "subnet-0542167f36d400293",
            "tags": {
              "Environment": "prod",
              "Name": "sentiflow-vpc-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "sentiflow-vpc-us-east-1a",
              "Owner": "DevOps-Student",
              "Project": "SentiFlow",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-018cd55871b62158b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-08d0b8afbdc77a43e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-018cd55871b62158b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-054b0dc50126ad0d9",
            "id": "r-rtb-0ca5cc90ea26cf3b91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ca5cc90ea26cf3b9",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:525127693154:route-table/rtb-018cd55871b62158b",
            "id": "rtb-018cd55871b62158b",
            "owner_id": "525127693154",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08d0b8afbdc77a43e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "Name": "sentiflow-vpc-private",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "sentiflow-vpc-private",
              "Owner": "DevOps-Student",
              "Project": "SentiFlow",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc8e2683b888cc0c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:525127693154:route-table/rtb-0ca5cc90ea26cf3b9",
            "id": "rtb-0ca5cc90ea26cf3b9",
            "owner_id": "525127693154",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-054b0dc50126ad0d9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "Name": "sentiflow-vpc-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "sentiflow-vpc-public",
              "Owner": "DevOps-Student",
              "Project": "SentiFlow",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc8e2683b888cc0c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e84cac56a0e9307d",
            "route_table_id": "rtb-018cd55871b62158b",
            "subnet_id": "subnet-0166e326a339af57d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d4a931d316e603e",
            "route_table_id": "rtb-018cd55871b62158b",
            "subnet_id": "subnet-06e224c9bfd4b67de"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0230a729387636a62",
            "route_table_id": "rtb-0ca5cc90ea26cf3b9",
            "subnet_id": "subnet-0542167f36d400293"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b4196d91469b2fd7",
            "route_table_id": "rtb-0ca5cc90ea26cf3b9",
            "subnet_id": "subnet-035fabd44644c0ec2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:525127693154:subnet/subnet-0166e326a339af57d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0166e326a339af57d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "525127693154",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "sentiflow-vpc-private-us-east-1a",
              "Terraform": "true",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "sentiflow-vpc-private-us-east-1a",
              "Owner": "DevOps-Student",
              "Project": "SentiFlow",
              "Terraform": "true",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0dc8e2683b888cc0c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:525127693154:subnet/subnet-06e224c9bfd4b67de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e224c9bfd4b67de",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "525127693154",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "sentiflow-vpc-private-us-east-1b",
              "Terraform": "true",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "sentiflow-vpc-private-us-east-1b",
              "Owner": "DevOps-Student",
              "Project": "SentiFlow",
              "Terraform": "true",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0dc8e2683b888cc0c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:525127693154:subnet/subnet-0542167f36d400293",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0542167f36d400293",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "525127693154",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "sentiflow-vpc-public-us-east-1a",
              "Terraform": "true",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "sentiflow-vpc-public-us-east-1a",
              "Owner": "DevOps-Student",
              "Project": "SentiFlow",
              "Terraform": "true",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0dc8e2683b888cc0c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:525127693154:subnet/subnet-035fabd44644c0ec2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-035fabd44644c0ec2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "525127693154",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "sentiflow-vpc-public-us-east-1b",
              "Terraform": "true",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "sentiflow-vpc-public-us-east-1b",
              "Owner": "DevOps-Student",
              "Project": "SentiFlow",
              "Terraform": "true",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0dc8e2683b888cc0c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:525127693154:vpc/vpc-0dc8e2683b888cc0c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05df8fdaf5f2c86b7",
            "default_route_table_id": "rtb-0046a82be55697eed",
            "default_security_group_id": "sg-0df30932f99f8b33b",
            "dhcp_options_id": "dopt-0f18e33f95669cc0c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dc8e2683b888cc0c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0046a82be55697eed",
            "owner_id": "525127693154",
            "tags": {
              "Environment": "prod",
              "Name": "sentiflow-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "sentiflow-vpc",
              "Owner": "DevOps-Student",
              "Project": "SentiFlow",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}